Add logs cleanup function

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="my-12 flex">
-            <div id="btnLogs" onclick="notification('Not avaible yet', 'bg-rose-600')" class="mx-5 w-[88px] h-[88px] bg-orange-500 drop-shadow-lg hover:bg-orange-500 active:bg-orange-400 duration-100 rounded-[36px] cursor-pointer flex items-center justify-center text-2xl">
+            <div id="btnLogs" class="mx-5 w-[88px] h-[88px] bg-orange-500 drop-shadow-lg hover:bg-orange-500 active:bg-orange-400 duration-100 rounded-[36px] cursor-pointer flex items-center justify-center text-2xl">
                 <i class="fa-solid fa-delete-left text-slate-50"></i>
             </div>
             <div class="drop-shadow-xl">
