--- a/app/index.html
+++ b/app/index.html
@@ -20,12 +20,12 @@
         </div>
 
         <div class="my-12 flex">
-            <div id="btnDonwload" onclick="notification('Not avaible yet', 'bg-rose-600')" class="mx-5 w-[88px] h-[88px] bg-orange-500 drop-shadow-lg hover:bg-orange-500 active:bg-orange-400 duration-100 rounded-[36px] cursor-pointer flex items-center justify-center text-2xl">
+            <div id="btnDonwload" class="mx-5 w-[88px] h-[88px] bg-orange-500 drop-shadow-lg hover:bg-orange-500 active:bg-orange-400 duration-100 rounded-[36px] cursor-pointer flex items-center justify-center text-2xl">
                 <i class="fa-solid fa-download text-slate-50"></i>
             </div>
             <div class="drop-shadow-xl">
                 <p class="text-2xl font-medium">Erase downloads</p>
-                <p class="text-md w-[350px]">You might want to delete files older than a certain amount of days.</p>
+                <p class="text-md w-[350px]">Clear the path containing all your downloaded files.</p>
             </div>
         </div>
 
