--- a/app/index.html
+++ b/app/index.html
@@ -5,37 +5,47 @@
     <title>User Interface</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="p-8 bg-slate-200 select-none">
+<body class="px-8 pt-12 bg-zinc-900 text-zinc-50 select-none">
 
-    <div class="w-max mx-auto mt-12">
+    <div class="w-max h-max mx-auto">
+        <div class="mx-auto text-center">
+            <p class="text-2xl font-medium">MacOS Cleaner</p>
+            <p class="text-sm font-normal leading-5">Open Source, Light weight, Python Cleaner for MacOS.</p>
+        </div>
 
-        <div class="my-12 flex">
-            <div id="btnCache" class="mx-5 w-[88px] h-[88px] bg-orange-500 drop-shadow-lg hover:bg-orange-500 active:bg-orange-400 duration-100 rounded-[36px] cursor-pointer flex items-center justify-center text-2xl">
-                <i class="fa-solid fa-dumpster text-slate-50"></i>
-            </div>
-            <div class="drop-shadow-xl">
-                <p class="text-2xl font-medium">Clear cache</p>
-                <p class="text-md w-[350px]">App caches (e.g., browsers, editors, etc.).</p>
+        <div class="w-[400px] px-3 pt-2 py-3 border-[1.5px] rounded-[16px] drop-shadow-lg border-zinc-700 mt-8 bg-zinc-800">
+            <div class="flex justify-between">
+                <div>
+                    <p class="text-md font-medium">Cache</p>
+                    <p class="text-sm leading-4">Delete every file in your cache folder.</p>
+                </div>
+                <div class="my-auto">
+                    <p id="btnCache" class="px-2 border-blue-500 bg-blue-600 hover:border-blue-400 hover:bg-blue-500 duration-100 border-[1.5px] py-0.5 rounded-[9px] cursor-pointer">Start</p>
+                </div>
             </div>
         </div>
 
-        <div class="my-12 flex">
-            <div id="btnDonwload" class="mx-5 w-[88px] h-[88px] bg-orange-500 drop-shadow-lg hover:bg-orange-500 active:bg-orange-400 duration-100 rounded-[36px] cursor-pointer flex items-center justify-center text-2xl">
-                <i class="fa-solid fa-download text-slate-50"></i>
-            </div>
-            <div class="drop-shadow-xl">
-                <p class="text-2xl font-medium">Erase downloads</p>
-                <p class="text-md w-[350px]">Clear the path containing all your downloaded files.</p>
+        <div class="w-[400px] px-3 pt-2 py-3 border-[1.5px] rounded-[16px] drop-shadow-lg border-zinc-700 mt-4 bg-zinc-800">
+            <div class="flex justify-between">
+                <div>
+                    <p class="text-md font-medium">Downloads</p>
+                    <p class="text-sm leading-4">Erase your download files.</p>
+                </div>
+                <div class="my-auto">
+                    <p id="btnDonwload" class="px-2 border-blue-500 bg-blue-600 hover:border-blue-400 hover:bg-blue-500 duration-100 border-[1.5px] py-0.5 rounded-[9px] cursor-pointer">Start</p>
+                </div>
             </div>
         </div>
 
-        <div class="my-12 flex">
-            <div id="btnLogs" class="mx-5 w-[88px] h-[88px] bg-orange-500 drop-shadow-lg hover:bg-orange-500 active:bg-orange-400 duration-100 rounded-[36px] cursor-pointer flex items-center justify-center text-2xl">
-                <i class="fa-solid fa-delete-left text-slate-50"></i>
-            </div>
-            <div class="drop-shadow-xl">
-                <p class="text-2xl font-medium">Delete system logs</p>
-                <p class="text-md w-[350px]">These are system logs that rotate automatically, but you can clean old ones.</p>
+        <div class="w-[400px] px-3 pt-2 py-3 border-[1.5px] rounded-[16px] drop-shadow-lg border-zinc-700 mt-4 bg-zinc-800">
+            <div class="flex justify-between">
+                <div>
+                    <p class="text-md font-medium">Logs</p>
+                    <p class="text-sm leading-4">Clear the System Logs path.</p>
+                </div>
+                <div class="my-auto">
+                    <p id="btnLogs" class="px-2 border-blue-500 bg-blue-600 hover:border-blue-400 hover:bg-blue-500 duration-100 border-[1.5px] py-0.5 rounded-[9px] cursor-pointer">Start</p>
+                </div>
             </div>
         </div>
 
