--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,6 @@
             <p class="text-2xl font-medium">MacOS Cleaner</p>
             <p class="text-sm font-normal leading-5">Open Source, Light weight, Python Cleaner for MacOS.</p>
         </div>
-
         <div class="w-[400px] px-3 pt-2 py-3 border-[1.5px] rounded-[16px] drop-shadow-lg border-zinc-700 mt-8 bg-zinc-800">
             <div class="flex justify-between">
                 <div>
@@ -24,7 +23,6 @@
                 </div>
             </div>
         </div>
-
         <div class="w-[400px] px-3 pt-2 py-3 border-[1.5px] rounded-[16px] drop-shadow-lg border-zinc-700 mt-4 bg-zinc-800">
             <div class="flex justify-between">
                 <div>
@@ -36,7 +34,6 @@
                 </div>
             </div>
         </div>
-
         <div class="w-[400px] px-3 pt-2 py-3 border-[1.5px] rounded-[16px] drop-shadow-lg border-zinc-700 mt-4 bg-zinc-800">
             <div class="flex justify-between">
                 <div>
@@ -48,7 +45,15 @@
                 </div>
             </div>
         </div>
+    </div>
 
+    <div class="fixed bottom-2 left-2 justify-center text-zinc-500">
+        <div class="flex justify-center gap-6 mt-2 text-sm">
+            <p>CPU: <span id="cpu">--</span>%</p>
+            <p>RAM: <span id="ram">--</span>%</p>
+            <p>Disk: <span id="disk">--</span>%</p>
+            <p>Temp: <span id="temp">--</span>°C</p>
+        </div>
     </div>
 
     <script src="main.js"></script>
