--- a/app/index.html
+++ b/app/index.html
@@ -48,14 +48,14 @@
             </div>
         </div>
 
-        <div class="w-[400px] px-3 pt-2 py-3 border-[1.5px] rounded-[16px] drop-shadow-lg border-zinc-700 mt-4 bg-zinc-800">
+        <div class="w-[400px] px-3 pt-2 py-3 border-[1.5px] rounded-[16px] drop-shadow-lg border-zinc-700 mt-12 bg-zinc-800">
             <div class="flex justify-between">
                 <div>
                     <p class="text-md font-medium">Antivirus Scan</p>
                     <p class="text-sm leading-4">Scan user files for suspicious content.</p>
                 </div>
                 <div class="my-auto">
-                    <p id="btnScan" class="px-2 border-red-500 bg-red-600 hover:border-red-500 duration-100 border-[1.5px] py-0.5 rounded-[9px] cursor-pointer">Start</p>
+                    <p id="btnScan" class="px-2 border-rose-500 bg-rose-600 hover:bg-rose-500 hover:border-rose-400 duration-100 border-[1.5px] py-0.5 rounded-[9px] cursor-pointer">Start</p>
                 </div>
             </div>
         </div>
